--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,9 @@ html {
 }
 
 .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -30,9 +33,268 @@ blockquote,
 fieldset {
   margin: 0;
   padding: 0;
+  border: 0;
 }
 
 ul,
 ol {
   list-style: none;
 }
+
+.content{
+  margin: 0 auto;
+  width: 1140px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 30px;
+}
+
+.content__list {
+  height: 298px;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 30px;
+  overflow: auto;
+}
+
+.content__details {
+  width: 100%;
+  height: 100%;
+}
+
+.result__video-container {
+  width: 711px;
+  height: 386px;
+  display: flex;
+  position: relative;
+  flex-direction: column-reverse;
+  margin-bottom: 16px;
+}
+
+.result__video{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.content__video-card{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.content__video-card-description-container{
+  width: 200px;
+  height: 100%;
+}
+
+.content__video-card-thumbnail{
+  width: 194px;
+  height: 103px;
+}
+
+.content__card-link {
+  color: #FFF;
+  display: block;
+  margin: 2px;
+  text-decoration: none;
+}
+
+.content__card-link:active{
+  background-color: #545050; 
+}
+
+.content__card-link:hover{
+  text-decoration: underline;
+}
+
+.content__card-link:focus-visible{
+  box-shadow: 0 0 0 1px #FFF;
+  outline: none;
+}
+
+.content__card-link_current {
+  background-color: #545050;  
+}
+
+.search-form {
+  padding-top: 16px;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.search-form__fieldset-title {
+  color: #FFF;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+}
+
+.search-form__label{
+  color: #FFF; 
+  display: flex;  
+  align-items: center;
+  width: fit-content; /* подгоняем ширину контейнера под размер внутренних элементов */
+  cursor: pointer;
+  padding: 1px;
+  gap: 5px;
+  appearance: none;
+}
+
+.search-form__label:has(:focus-visible){
+  outline-offset: 1px;
+  outline: 1px solid #FFF;
+}
+
+.search-form__checkbox-list{
+  display: flex; /* выстраиваем чекбоксы в линию */
+  gap: 15px;  
+}
+
+.search-form__pseudo-checkbox{
+  width: 19px;
+  height: 19px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  border: 1px solid #FFF;
+}
+
+.search-form__checkbox:checked+.search-form__pseudo-checkbox::after, .search-form__pseudo-checkbox:active::after {
+  background-color: #FFF;
+  content: "";
+  min-block-size: 14px;
+  min-inline-size: 14px;
+}
+
+.search-form__label-text {
+  color: rgba(255, 255, 255, 0.70);
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+}
+
+.search-form__textfield{  
+  color: white;
+  width: 225px;
+  height: 27px;  
+  appearance: none;
+  background-color: transparent;
+  font-size: inherit;
+  font-family: inherit; 
+  border-inline-start: 1px solid transparent;
+  border-inline-end: 1px solid transparent;
+  border-block-start: 1px solid #FFF; 
+  border-block-end: 1px solid #FFF;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.title {
+  padding-bottom:26px;
+  color: #FFF;
+  font-family: Oswald;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+  font-family: Oswald;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 94%; /* 70.5px */
+  text-transform: uppercase;
+}
+
+.content__video-card-title {
+  color: #FFF;
+  font-family: Oswald;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 30px */
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  color: #FFF;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16.2px; /* 90% */
+}
+
+.button{
+  margin-top: 20px;
+  color: #FFF;
+  width: 194px;
+  height: 34px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: transparent;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  line-height: normal;  
+  font-style: normal;
+  font-weight: 700;
+  cursor: pointer;
+  border: 1px solid #FFF;
+}
+
+button:focus {
+  outline: none;
+}
+
+.button:hover{
+  text-decoration: underline;
+}
+
+.button:active{
+  background-color: #545050;
+}
+
+.button:focus-visible{  
+  outline: 1px solid #FFF;
+  outline-offset: 2px;
+}
+
+.search-form__submit-button{
+  cursor: pointer;  
+}
+
+.more-button{  
+  width: 399px;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+} 
