--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,11 @@ ol {
   list-style: none;
 }
 
+.border {
+  border: solid 1px red;
+
+}
+
 .content{
   margin: 0 auto;
   width: 1140px;
@@ -52,6 +57,7 @@ ol {
 
 .content__list {
   height: 298px;
+
   display: flex;
   position: relative;
   flex-direction: column;
@@ -66,12 +72,12 @@ ol {
 }
 
 .result__video-container {
+  margin: 0;
   width: 711px;
   height: 386px;
   display: flex;
   position: relative;
   flex-direction: column-reverse;
-  margin-bottom: 16px;
 }
 
 .result__video{
@@ -94,6 +100,8 @@ ol {
 .content__video-card-thumbnail{
   width: 194px;
   height: 103px;
+  object-fit: contain;
+  object-position: 50% 50%;
 }
 
 .content__card-link {
@@ -109,6 +117,10 @@ ol {
 
 .content__card-link:hover{
   text-decoration: underline;
+}
+
+.content__card-link:focus{
+  outline: none;
 }
 
 .content__card-link:focus-visible{
@@ -129,9 +141,14 @@ ol {
   align-items: flex-start;
 }
 
+/*.search-form__fieldset {
+  margin-top: 9px;
+}*/
+
 .search-form__fieldset-title {
+  margin-bottom: 5px;
   color: #FFF;
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -178,8 +195,8 @@ ol {
 }
 
 .search-form__label-text {
-  color: rgba(255, 255, 255, 0.70);
-  font-family: Fira Sans Condensed;
+  color: #FFF;
+  font-family: Fira Sans Condensed, Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -187,8 +204,13 @@ ol {
   text-decoration: none;
 }
 
+.search-form__label-text:hover{
+  text-decoration: underline;
+}
+
 .search-form__textfield{  
   color: white;
+  padding: 0;
   width: 225px;
   height: 27px;  
   appearance: none;
@@ -197,8 +219,8 @@ ol {
   font-family: inherit; 
   border-inline-start: 1px solid transparent;
   border-inline-end: 1px solid transparent;
-  border-block-start: 1px solid #FFF; 
-  border-block-end: 1px solid #FFF;
+  border-block-start: 1px solid currentColor; 
+  border-block-end: 1px solid currentColor;
 }
 
 .search-form__textfield:focus {
@@ -206,9 +228,9 @@ ol {
 }
 
 .title {
-  padding-bottom:26px;
+  padding-bottom:24px;
   color: #FFF;
-  font-family: Oswald;
+  font-family: Oswald, Arial, sans-serif;
   font-size: 75px;
   font-style: normal;
   font-weight: 700;
@@ -218,27 +240,26 @@ ol {
 
 .content__accent {
   color: #545050;
-  font-family: Oswald;
-  font-size: 75px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 94%; /* 70.5px */
-  text-transform: uppercase;
 }
 
 .content__video-card-title {
+  max-width: 200px;
   color: #FFF;
-  font-family: Oswald;
+  font-family: Oswald, Arial, sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 700;
   line-height: 100%; /* 30px */
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap; 
+  overflow: hidden;
 }
 
 .content__video-card-description {
+  max-width: 200px;
   color: #FFF;
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -261,7 +282,7 @@ ol {
   font-style: normal;
   font-weight: 700;
   cursor: pointer;
-  border: 1px solid #FFF;
+  border: 1px solid currentColor;
 }
 
 button:focus {
